pgadmin4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  namespace: pgsql
  labels:
    app: pgadmin4
    managed-by: terraform
spec:
  ports:
  - port: ${pgadmin4_config.port}
    targetPort: ${pgadmin4_config.listen_port}
    protocol: TCP
  selector:
    app: pgadmin4
  type: ClusterIP
